# src/BuildingBlocks/Base.Domain/Result/ErrorType.cs
@@ -8,5 +8,6 @@ public enum ErrorType
     Failure,
     Validation,
     NotFound,
+    Forbidden,
     Unexpected
 }
